--- a/iiot/app_web/shop/css/style.css
+++ b/iiot/app_web/shop/css/style.css
@@ -23,7 +23,7 @@ a:hover{ text-decoration:none;}
 select, input, textarea, button {  font-family:'Noto Sans TC',Arial,"微軟正黑體","新細明體", sans-serif;}
 *:link, *:visited, *:hover, *:active, *:focus , * {border: none;outline: none;  -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 html, body{ height: 100%; }
-input { -webkit-appearance: none; -moz-appearance: none; appearance: none;}
+input { -webkit-appearance: none; -moz-appearance: none; appearance: none; -webkit-appearance:none;}
 select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-appearance:none;}
 *{ -ms-touch-action: manipulation; touch-action: manipulation; }
 
@@ -180,7 +180,7 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 .shopping_cart ul.fillin{ max-width: 400px; padding: 15px; margin: 0 auto;}
 .shopping_cart ul.fillin li label{ width: 100%; display: block; font-size: 13.5px; color: #828282; padding:15px 0 10px 20px; }
 .shopping_cart ul.fillin li input{ width: 100%; border: 1px solid #fff; padding: 0 18px; margin: 0 auto; font-size: 15px; border-radius: 50px; height: 40px; background-color: #f0f0f0;}
-.shopping_cart ul.fillin li input::placeholder{ color: #a9a9a9; }
+.shopping_cart ul.fillin li input::placeholder{ color: #a9a9a9; font-size: 13px; }
 .shopping_cart ul.fillin li textarea{ width: 100%; border: 1px solid #fff; padding: 15px 18px; min-height: 80px; line-height: 28px; margin: 0 auto; font-size: 15px; border-radius: 15px; background-color: #f0f0f0;}
 .shopping_cart ::-webkit-input-placeholder, .shopping_cart input::-moz-placeholder, .shopping_cart input::-moz-placeholder, .shopping_cart:-ms-input-placeholder{color: red;}
 .shopping_cart ul.fillin li input:focus{ border-color: #ff8a00; }
@@ -199,13 +199,34 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 .shopping_cart ul.the_btn li.the_selected p{ border-color: #ffcd00; }
 .shopping_cart .a_box{ width: 100%; max-width: 500px; margin: 0 auto; padding-bottom: 35px; display: none; }
 .shopping_cart .a_box p.sub_title{ text-align: center; padding: 10px 0; }
-.shopping_cart .a_box input.fill_in{ width: 100%; text-align: center; color: #333; background-color: #f8f8f8; border-radius: 50px; font-weight: bold; font-size: 18px; text-align: center; height: 35px; line-height: 35px; padding: 10px;}
+.shopping_cart .a_box input.fill_in{ width: 100%; text-align: center; color: #333; background-color: #f8f8f8; border-radius: 50px; font-weight: bold; font-size: 16px; text-align: center; height: 40px; line-height: 40px; padding: 10px;}
 .shopping_cart .a_box input.fill_in::placeholder{ color: #cecece; }
 .shopping_cart .a_box .the_datepicker{ max-width: 260px; margin: 0 auto; position: relative; }
 .shopping_cart .a_box .the_datepicker i{position: absolute; left: 5px; top: 0; color: #5f6368; z-index: 10; width: 35px; height: 35px; line-height: 35px; text-align: center;}
 #mydatepicker{ margin-bottom: 15px; }
 .padding_bottom_100{ padding-bottom: 100px; }
 .f_red{ color: #e85718; }
+
+
+.order_list{ width: 100%; padding: 0 15px; margin: 0 auto; padding-bottom: 25px;}
+.order_list .sbox{ width:25%; padding: 10px 0; vertical-align: middle; font-weight: inherit; /* min-height: 45px;*/  border-bottom: 1px solid #f5f5f5; }
+.order_list .top_title .sbox{ text-align: center; background-color: #f5f5f5; border-top: 1px solid #e4e4e4; vertical-align: middle; align-content: center; }
+.order_list .car_name{width:calc(75% - 80px);}
+.order_list tr td.car_nb, .order_list tr td.car_money{text-align: center;}/*  display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center*/}
+.order_list .car_name p.product_name{ text-align:left; padding: 5px; width: 100%;}
+.order_list .car_nb{ width: 80px; }
+
+ul.order_list_done{ width: 100%; margin: 0 auto; max-width: 500px; padding: 20px 0;}
+ul.order_list_done li{padding: 8px 0; border-bottom: 1px solid #f5f5f5;}
+ul.order_list_done li p{ font-size: 14px; line-height: 20px; }
+ul.order_list_done li span{ float: left; }
+ul.order_list_done li span.l_t{ width: 90px; text-align: right; padding-right: 15px; color: #555;}
+ul.order_list_done li span.r_info{ width:calc(100% - 90px); }
+ul.order_list_done li.bottom_line{ border-bottom: 1px dashed #a2a2a2; padding-bottom: 15px; margin-bottom: 15px;}
+ul.order_list_done li.buy_list span.l_t{ width:calc(100% - 110px); text-align: left; color: #333;}
+ul.order_list_done li.buy_list span.r_nb{ width:110px; text-align: right;}
+ul.order_list_done li.width_f p{ text-align: center; padding: 10px 0; color: #e85718; font-weight: bold; background-color: #fff7f7; border-radius: 10px;}
+ul.order_list_done li p.s_f{ font-size: 12px; color: #666; }
 
 @media screen and (-ms-high-contrast: active),(-ms-high-contrast: none){
 	ul.shopping_car_list .car_delete a.yesDelets{ top:0px;}
@@ -250,6 +271,7 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 	.shopping_cart{ padding: 15px !important;}
 	.shopping_cart h3.top_title{padding-bottom: 5px;}
 	.shopping_order .shopping_cart{ padding: 0 15px !important;}
+	.shopping_order .order_list{ padding: 0}
 	.shopping_cart p.quantity_products{padding-bottom: 10px;}
 	ul.shopping_car_list li.top_title{display: none;}
 	ul.shopping_car_list .sbox{width:calc(50% - 80px); padding: 0; min-height: 75px;}
@@ -271,7 +293,7 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 	.bottom_manager_tools p.btn a{ padding: 8px 10px;}
 	.the_productbox .products_box ul.products_list li .product_info p.money{top: 10px;}
 	.the_productbox .products_box ul.products_list li{ width: calc(50% - 10px); margin: 40px 5px 25px 5px; padding:40px 6px 10px 6px;}
-	.input_quantity button{font-size: 13px; width: 32px; height: 32px; }
+	.input_quantity button{font-size: 13px; width: 32px; height: 32px; line-height: 32px; }
 	.input_quantity input{ font-size: 16px; width: 36px; height: 32px; line-height: 32px;}
 	ul.shopping_car_list .sbox p{ font-size: 14px; }
 	ul.shopping_car_list .sbox{ width: calc(50% - 65px);}
@@ -293,6 +315,11 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 	.fadebox input{font-size: 12px;}
 	.fadebox h3.top_title{ font-size: 16px; }
 	.modal{padding: 15px !important;}
+
+	.shopping_cart h3.top_title{ font-size: 16px; }
+	.shopping_cart p.quantity_products{ font-size: 12px; }
+	.shopping_cart p.quantity_products span{ font-size: 14px; }
+	.order_list p{ font-size: 13px; }
 }
 @media screen and (max-height: 450px) {
 }
