--- a/c201907-mhb-game/css/style.css
+++ b/c201907-mhb-game/css/style.css
@@ -33,8 +33,8 @@ main{width: 100%;}
 
 .kv_main{ width: 100%; text-align: center; background-color: #261f1c; }
 .kv_main img{ width: 100%; max-width: 1000px; display: inline-block; }
-
 .top_menu{ background-color: #c40119; position: sticky; top: 0px; position: -webkit-sticky; position: -moz-sticky; position: -ms-sticky; position: -o-sticky; z-index: 50;}
+.top_menu .content_box{ padding: 0; }
 .top_menu a{ width: 33.33%; cursor: pointer; text-indent: -9999px; height: 100%; top: 0; left: 0; position: absolute; display: block; }
 .top_menu a.go_02{ left: 33.33%; }
 .top_menu a.go_03{ left: 66.66%; }
@@ -45,9 +45,10 @@ main{width: 100%;}
 
 .eventinfo_box{ width: 100%; padding: 50px 0 100px 0; }
 .eventinfo_box h4{ font-size: 42px; line-height: 45px; font-weight: bold; color: #000000; padding: 50px 0 30px 0; text-align: center; }
-.eventinfo_box h4 a{ color: #c50018; display: block; max-width: 70%; margin: 0 auto; font-size: 33px; word-wrap: break-word; word-break: break-all;}
+.eventinfo_box h4 a{ color: #c50018; padding-bottom: 30px; display: block; max-width: 75%; margin: 0 auto; font-size: 26px; word-wrap: break-word; word-break: break-all;}
+.eventinfo_box h4 a:hover{ text-decoration: underline; }
 
-.eventinfo_box p.p_info{ font-size: 33px; line-height:46px; text-align: center; color: #000;}
+.eventinfo_box p.p_info{ font-size: 33px; line-height:46px; text-align: left; color: #000;max-width: 750px; margin: 0 auto;}
 .eventinfo_box p.p_info span.nb{ font-weight: 800; font-size: 44px;  }
 .eventinfo_box p.p_info span.f_red{ color: #db0225; font-weight: bold; }
 .eventinfo_box p.p_info span.f_s{ font-size: 30px; }
@@ -69,13 +70,13 @@ main{width: 100%;}
 .note_box ul{ list-style-type: decimal; max-width: 780px; margin: 0 auto; color: #fff; list-style-position: outside; font-size: 20px; padding-left: 20px;}
 .note_box ul li{padding-bottom: 30px;}
 .note_box ul li p{ font-size:25px; text-align: left; color: #fff; display: block; line-height: 33px; text-align: justify;}
-.note_box ul li p a{ color: #f5bd3f; }
+.note_box ul li p a{ color: #fff; word-wrap: break-word; word-break: break-all;}
 .note_box ul li p a:hover{ text-decoration: underline; }
 .note_box .img{ max-width: 310px; margin: 0 auto; padding: 30px 0 20px 0; }
 .note_box ul.treasure_info{ list-style-type: none; padding-top: 25px; max-width: 725px; padding-left: 30px;}
 .note_box ul.treasure_info li{padding-bottom:10px; position: relative;}
 .note_box ul.treasure_info li::after{content: ""; position: absolute;width: 21px; height: 21px; top: 5px; left: -30px; display: block; background:url(../images/icon_diamond.png) center center no-repeat; background-size: contain;}
-.note_box ul.treasure_info li p{ font-weight: bold; font-size: 32px; }
+.note_box ul.treasure_info li p{ font-weight: bold; font-size: 32px; word-wrap: break-word; word-break: break-all; }
 .note_box ul.treasure_info li p span{ color: #f5bd3f; }
 
 
@@ -98,7 +99,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b76712', end
 .bg_paper_01{ padding-top: 195px; min-height: 1593px; background:url(../images/bg_paper_01.png) top center no-repeat; background-size: contain; }
 .bg_paper_02{ padding-top: 195px; min-height: 4648px; background:url(../images/bg_paper_02.png) top center no-repeat; background-size: contain; }
 .bg_paper_01 h4{ padding-bottom: 60px;} 
-.bg_paper_02 h4{ padding-bottom: 0px;} 
+.bg_paper_02 h4{ padding-bottom: 0px; padding-top: 0;} 
 
 h3.img_title{ position: absolute; left: 0; text-indent: -9999px; z-index: 10; top: -97px; width: 100%; height: 114px; padding: 0; display: block; background-repeat: no-repeat; background-position: center center; background-size: contain; }
 h3.title_01{ background-image: url(../images/title_01.png); top: 95px; }
@@ -152,10 +153,11 @@ h3.title_03{ background-image: url(../images/title_03.png); top: 85px; }
 }
 @media (max-width:650px){
 	h3.img_title{ height: 60px; }
+	.eventinfo_box .btn_link p.btn a{ height: 60px; }
 	.eventinfo_box h2{ font-size: 32px; line-height: inherit; }
 	.eventinfo_box h2 span{ display: block; }
 	.eventinfo_box p.p_info{ font-size: 20px;  line-height: 26px; }
-	.eventinfo_box h4 a{ font-size: 26px; }
+	.eventinfo_box h4 a{ font-size: 24px; }
 	.top_menu span::after{ top: 52px; }
 	.note_box ul{font-size: 16px;}
 	.note_box ul li p{ font-size: 16px; line-height: 24px; }
@@ -191,20 +193,21 @@ h3.title_03{ background-image: url(../images/title_03.png); top: 85px; }
 	.eventinfo_box .btn_link p.btn a{ margin: 5px auto; }
 	.bg_paper_01 h4{ max-width: 58%; font-size: 21px; padding-top: 90px;}
 	.bg_paper_02{ min-height: 2500px; }
+	.bg_paper_02 .btn_link{padding-top: 0;}
 	.note_box .content_box{ width: 100%; }
 	.note_box ul{font-size: 14px;}
 	.note_box ul li p{ font-size: 15px; }
 	.eventinfo_box p.p_info{ font-size: 18px; }
 	.eventinfo_box p.p_info span.f_s{ font-size: 14px; }
 	.eventinfo_box h4{ line-height: 32px; }
-	.eventinfo_box h4 a{ font-size: 22px; }
+	.eventinfo_box h4 a{ font-size: 20px; }
 }
 @media (max-width:400px){
 	h3.img_title{ height: 50px; }
 	.note_box{ padding-bottom: 20px; }
 	.eventinfo_box p.p_info{ max-width: 87%;}
 	.note_box .img{ max-width: 200px; }
-	.eventinfo_box h4 a{ font-size: 20px; }
+	.eventinfo_box h4 a{ font-size: 18px; }
 	.eventinfo_box .btn_link p.btn a{ height: 55px; }
 	.bg_paper_02{ min-height: 2350px; }
 	.note_box h3{ font-size: 22px; padding: 15px 0 20px 0; }
