--- a/c201907-mhb-game/css/style.css
+++ b/c201907-mhb-game/css/style.css
@@ -213,6 +213,8 @@ h3.title_03{ background-image: url(../images/title_03.png); top: 85px; }
 	.note_box ul.treasure_info li::after{ top: 3px; }
 }
 @media (max-width:400px){
+	h3.title_01, h3.title_03{ top: 25px; }
+	h3.title_02{ top: -42px; }
 	h3.img_title, .eventinfo_box .btn_link p.btn a{ height: 50px; }
 	.eventinfo_box p.p_info{ max-width: 87%;}
 	.note_box{ padding-bottom: 20px; }
@@ -220,9 +222,10 @@ h3.title_03{ background-image: url(../images/title_03.png); top: 85px; }
 	.note_box ul{ font-size: 13px; }
 	.note_box ul li{ padding-bottom: 15px; }
 	.note_box ul li p{ font-size: 13px;  line-height: 18px;}
+	.note_box ul.treasure_info{padding-bottom: 40px;}
 	.note_box .img{ max-width: 200px; }
 	.bg_paper_01 { min-height: 800px;  background: url(../images/bg_paper_01xs.png) top center no-repeat; background-size: contain;}
-	.bg_paper_02{ min-height: 2250px; padding-top: 100px; }
+	.bg_paper_02{ min-height: 2250px; padding-top: 85px; }
 }
 @media (max-width:330px){
 	h3.img_title{ height: 45px; top: -38px; }
